--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,12 +141,17 @@ img{
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 2rem;
+    border: none;
 
 }
 @media(min-width:768px){
     .boton{
         display: inline-block;
     }
+}
+.boton:hover{
+    /* para que se pueda clickear*/
+    cursor:pointer;
 }
 .boton--primario{
     background-color: var(--negro);
@@ -221,4 +226,33 @@ img{
   .curso__label,
   .curso__info{
       font-size: 2rem;
+  }
+  /* Contacto */
+  .contacto-bg{
+    background-image: url(../imagenes/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
+    background-repeat:no-repeat;
+  }
+  .formulario{
+   background-color: var(--blanco);
+   margin:-5rem auto 0 auto;
+   width: 95%;
+   padding:5rem;
+  }
+  .campo{
+   display: flex;
+   margin-bottom: 2rem;
+  }
+  .campo__label{
+  flex:0 0 9rem;
+  text-align: right;
+  padding-right: 2rem;
+  }
+  .campo__field{
+  flex:1;
+  border:1px solid var(--claro);
+  }
+  .campo__field--textarea{
+ height: 20rem;
   }
