--- a/public/css/style.css
+++ b/public/css/style.css
@@ -228,6 +228,20 @@ img{
       font-size: 2rem;
   }
   /* Contacto */
+  .error{
+    background-color: red;
+    text-align: center;
+    padding: 1rem;
+    color:var(--blanco);
+    text-transform: uppercase;
+  }
+  .correcto{
+    background-color:rgb(74,185, 0);
+    text-align: center;
+    padding: 1rem;
+    color:var(--blanco);
+    text-transform: uppercase;
+  }
   .contacto-bg{
     background-image: url(../imagenes/contacto.jpg);
     height: 40rem;
